--- a/public/index.html
+++ b/public/index.html
@@ -3,41 +3,77 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webhook Responses</title>
+    <title>ABDM Webhook Viewer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-100">
+    <div class="container mx-auto p-4">
+      <h1 class="text-2xl font-bold mb-4">ABDM Webhook Viewer</h1>
+      <button
+        id="refreshBtn"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-4"
+      >
+        Refresh
+      </button>
+      <button
+        id="clearBtn"
+        class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mb-4 ml-2"
+      >
+        Clear All
+      </button>
+      <div id="webhooks" class="space-y-4"></div>
+    </div>
+
     <script>
-      async function pollServer() {
-        try {
-          const response = await fetch(`/api/poll-responses`);
-          const result = await response.json();
-          const responseContainer = document.getElementById("responses");
-          responseContainer.innerHTML = ""; // Clear previous responses
-
-          if (result.status === "success") {
-            result.data.forEach((item) => {
-              const pre = document.createElement("pre");
-              pre.textContent = JSON.stringify(item, null, 2);
-              responseContainer.appendChild(pre);
+      function fetchWebhooks() {
+        fetch("/api/webhooks")
+          .then((response) => response.json())
+          .then((data) => {
+            const webhooksDiv = document.getElementById("webhooks");
+            webhooksDiv.innerHTML = "";
+            data.forEach((webhook) => {
+              const webhookDiv = document.createElement("div");
+              webhookDiv.className = "bg-white p-4 rounded shadow";
+              webhookDiv.innerHTML = `
+                            <p class="font-bold">${webhook.timestamp}</p>
+                            <p>Method: ${webhook.method}</p>
+                            <p>URL: ${webhook.url}</p>
+                            <pre class="mt-2 bg-gray-100 p-2 rounded">${JSON.stringify(
+                              webhook.body,
+                              null,
+                              2
+                            )}</pre>
+                            <button class="deleteBtn bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded mt-2" data-id="${
+                              webhook.id
+                            }">
+                                Delete
+                            </button>
+                        `;
+              webhooksDiv.appendChild(webhookDiv);
             });
-          } else {
-            const pre = document.createElement("pre");
-            pre.textContent = "Waiting for responses...";
-            responseContainer.appendChild(pre);
-          }
-
-          // Continue polling every second
-          setTimeout(pollServer, 1000);
-        } catch (error) {
-          console.error("Error polling server:", error);
-        }
+          });
       }
 
-      document.addEventListener("DOMContentLoaded", (event) => {
-        pollServer();
+      document
+        .getElementById("refreshBtn")
+        .addEventListener("click", fetchWebhooks);
+
+      document.getElementById("clearBtn").addEventListener("click", () => {
+        fetch("/api/webhooks", { method: "DELETE" }).then(() =>
+          fetchWebhooks()
+        );
       });
+
+      document.getElementById("webhooks").addEventListener("click", (e) => {
+        if (e.target.classList.contains("deleteBtn")) {
+          const id = e.target.getAttribute("data-id");
+          fetch(`/api/webhooks/${id}`, { method: "DELETE" }).then(() =>
+            fetchWebhooks()
+          );
+        }
+      });
+
+      fetchWebhooks();
     </script>
-  </head>
-  <body>
-    <h1>Webhook Responses</h1>
-    <div id="responses">Waiting for responses...</div>
   </body>
 </html>
